--- a/.env.example
+++ b/.env.example
@@ -19,6 +19,18 @@ AUTH_SECRET=""
 AUTH_DISCORD_ID=""
 AUTH_DISCORD_SECRET=""
 
+# AURINKO
+AURINKO_CLIENT_ID=
+AURINKO_CLIENT_SECRET=
+AURINKO_SIGNING_SECRET=
+
+# Google provider
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+# DATABASE
+DB_USER=
+DB_PASSWORD=
+DB_DATABASE=
 # Prisma
 # https://www.prisma.io/docs/reference/database-reference/connection-urls#env
 DATABASE_URL="postgresql://postgres:password@localhost:5432/mailai"
