--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "check": "next lint && tsc --noEmit",
     "db:generate": "prisma migrate dev",
     "db:migrate": "prisma migrate deploy",
-    "db:push": "prisma db push",
-    "db:studio": "prisma studio",
+    "push": "prisma db push",
+    "studio": "prisma studio",
     "dev": "next dev --turbo",
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
     "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
-    "postinstall": "prisma generate",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
@@ -22,20 +21,73 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.2",
+    "@google-cloud/local-auth": "2.1.0",
+    "@hookform/resolvers": "^3.10.0",
     "@prisma/client": "^5.14.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.5",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-popover": "^1.1.5",
+    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-select": "^2.1.4",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@radix-ui/react-switch": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.2",
+    "@radix-ui/react-toggle": "^1.1.1",
+    "@radix-ui/react-toggle-group": "^1.1.1",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
+    "@tiptap/extension-text": "^2.11.5",
+    "@tiptap/react": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
     "@trpc/client": "^11.0.0-rc.446",
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
+    "@types/dompurify": "^3.2.0",
+    "@types/turndown": "^5.0.5",
+    "@vercel/functions": "^2.0.0",
+    "add": "^2.0.6",
+    "and": "^0.0.3",
+    "avatar": "^0.1.0",
+    "axios": "^1.7.9",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "dompurify": "^3.2.3",
+    "framer-motion": "^12.0.6",
     "geist": "^1.3.0",
+    "googleapis": "^144.0.0",
+    "jotai": "^2.11.0",
+    "kbar": "^0.1.0-beta.45",
+    "lucide-react": "^0.469.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
+    "next-themes": "^0.4.4",
+    "nylas": "^7.7.4",
+    "p-limit": "^6.2.0",
+    "quill": "^2.0.3",
     "react": "^18.3.1",
+    "react-avatar": "^5.0.3",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
+    "react-letter": "^0.4.0",
+    "react-resizable-panels": "^2.1.7",
+    "react-select": "^5.10.0",
     "server-only": "^0.0.1",
+    "shadcn": "^2.1.8",
+    "sonner": "^1.7.1",
     "superjson": "^2.2.1",
-    "zod": "^3.23.3"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tiptap": "^1.32.2",
+    "turndown": "^7.2.0",
+    "usehooks-ts": "^3.1.0",
+    "vaul": "^1.1.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
