--- a/package.json
+++ b/package.json
@@ -20,9 +20,18 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.2.5",
+    "@ai-sdk/openai": "^1.3.6",
     "@auth/prisma-adapter": "^2.7.2",
+    "@formkit/auto-animate": "^0.8.2",
     "@google-cloud/local-auth": "2.1.0",
+    "@google/genai": "^0.8.0",
+    "@google/generative-ai": "^0.24.0",
+    "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
+    "@opentelemetry/api": "^1.9.0",
+    "@orama/orama": "^3.1.5",
+    "@orama/plugin-data-persistence": "^3.1.5",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -40,6 +49,12 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.50.0",
+    "@tiptap-pro/extension-file-handler": "^2.18.0-beta.13",
+    "@tiptap/extension-highlight": "^2.12.0",
+    "@tiptap/extension-table": "^2.11.5",
+    "@tiptap/extension-table-cell": "^2.11.5",
+    "@tiptap/extension-table-header": "^2.11.5",
+    "@tiptap/extension-table-row": "^2.11.5",
     "@tiptap/extension-text": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
@@ -47,13 +62,16 @@
     "@trpc/react-query": "^11.0.0-rc.446",
     "@trpc/server": "^11.0.0-rc.446",
     "@types/dompurify": "^3.2.0",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/turndown": "^5.0.5",
     "@vercel/functions": "^2.0.0",
     "add": "^2.0.6",
+    "ai": "^4.2.10",
     "and": "^0.0.3",
     "avatar": "^0.1.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dompurify": "^3.2.3",
@@ -62,6 +80,7 @@
     "googleapis": "^144.0.0",
     "jotai": "^2.11.0",
     "kbar": "^0.1.0-beta.45",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.469.0",
     "next": "^15.0.1",
     "next-auth": "5.0.0-beta.25",
